fixing spacing between buttons in update page

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -38,7 +38,8 @@ textarea {
 
 .button-area {
     display: flex;
-    justify-content: space-between
+    justify-content: space-between;
+    width: 100%;
 }
 
 .cancel-button {
